--- a/Registrar/Registrar.csproj
+++ b/Registrar/Registrar.csproj
@@ -55,6 +55,10 @@
       <HintPath>..\packages\Microsoft.Owin.Hosting.3.0.1\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
@@ -81,6 +85,10 @@
     <ProjectReference Include="..\RegistrarChatApi\RegistrarChatApi.csproj">
       <Project>{53600396-c5a9-4421-8ef8-a2415509be26}</Project>
       <Name>RegistrarChatApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistrarCommon\RegistrarCommon.csproj">
+      <Project>{3d9dcdd7-1145-420d-9931-33070a3715d3}</Project>
+      <Name>RegistrarCommon</Name>
     </ProjectReference>
     <ProjectReference Include="..\RegistrarSipApi\RegistrarSipApi.csproj">
       <Project>{49bcb3cf-3dfc-4b08-a845-7e66c8ab4dcf}</Project>
