--- a/Registrar/packages.config
+++ b/Registrar/packages.config
@@ -6,5 +6,6 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net46" />
   <package id="MSBuild.CopyDependencies" version="1.0.7" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
 </packages>
