--- a/RegistrarChatApi/packages.config
+++ b/RegistrarChatApi/packages.config
@@ -12,5 +12,6 @@
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
