--- a/RegistrarSipApi/packages.config
+++ b/RegistrarSipApi/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Julas.Utils" version="2.0.5" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net46" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="SIPSorcery" version="1.5.5" targetFramework="net46" />
 </packages>
