--- a/RegistrarWebApi/packages.config
+++ b/RegistrarWebApi/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Julas.Utils" version="2.0.5" targetFramework="net452" />
   <package id="Nancy" version="1.4.3" targetFramework="net452" />
+  <package id="Nancy.Bootstrappers.Ninject" version="1.4.1" targetFramework="net46" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
+  <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net46" />
 </packages>
