Dodano czat od strony serwera

--- a/RegistrarChatApi/RegistrarChatApi.csproj
+++ b/RegistrarChatApi/RegistrarChatApi.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatHub.cs" />
+    <Compile Include="Connection.cs" />
     <Compile Include="NinjectDependencyResolver.cs" />
     <Compile Include="RegistrarSignalRServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
