--- a/RegistrarCommon/RegistrarCommon.csproj
+++ b/RegistrarCommon/RegistrarCommon.csproj
@@ -41,6 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chat\ClientListBroadcast.cs" />
+    <Compile Include="Chat\IncomingMessage.cs" />
+    <Compile Include="Chat\RegisterRequest.cs" />
+    <Compile Include="Chat\OutgoingMessage.cs" />
+    <Compile Include="ConcurrentHashSet.cs" />
     <Compile Include="ISessionCache.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="SessionCache.cs" />
