--- a/RegistrarWebApi/RegistrarWebApi.csproj
+++ b/RegistrarWebApi/RegistrarWebApi.csproj
@@ -75,20 +75,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Account\RegisterAccountRequest.cs" />
-    <Compile Include="Models\Account\RegisterAccountResponse.cs" />
     <Compile Include="ModuleBase.cs" />
     <Compile Include="Modules\Account.cs" />
     <Compile Include="NinjectBootstrapper.cs" />
     <Compile Include="RegistrarHttpServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Response.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\RegistrarCommon\RegistrarCommon.csproj">
+      <Project>{3D9DCDD7-1145-420D-9931-33070A3715D3}</Project>
+      <Name>RegistrarCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RegistrarWebApiClient\RegistrarWebApiClient.csproj">
+      <Project>{6f7dd597-04a5-45af-baf2-353aca792168}</Project>
+      <Name>RegistrarWebApiClient</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
