--- a/RegistrarWebApiClient/RegistrarWebApiClient.csproj
+++ b/RegistrarWebApiClient/RegistrarWebApiClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3D9DCDD7-1145-420D-9931-33070A3715D3}</ProjectGuid>
+    <ProjectGuid>{6F7DD597-04A5-45AF-BAF2-353ACA792168}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RegistrarCommon</RootNamespace>
-    <AssemblyName>RegistrarCommon</AssemblyName>
+    <RootNamespace>RegistrarWebApiClient</RootNamespace>
+    <AssemblyName>RegistrarWebApiClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,14 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chat\ClientListBroadcast.cs" />
-    <Compile Include="Chat\Message.cs" />
-    <Compile Include="ISessionCache.cs" />
-    <Compile Include="Session.cs" />
-    <Compile Include="SessionCache.cs" />
+    <Compile Include="Interfaces\IAccount.cs" />
+    <Compile Include="Models\Account\LoginRequest.cs" />
+    <Compile Include="Models\Account\RegisterAccountRequest.cs" />
+    <Compile Include="Models\Account\RegisterAccountResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestInterceptor.cs" />
+    <Compile Include="Response.cs" />
+    <Compile Include="WebApiClient.cs" />
+    <Compile Include="WebApiException.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
