--- a/RegistrarChatApiClient/RegistrarChatApiClient.csproj
+++ b/RegistrarChatApiClient/RegistrarChatApiClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F7DD597-04A5-45AF-BAF2-353ACA792168}</ProjectGuid>
+    <ProjectGuid>{6A733F41-9EBA-4F2D-AD95-FD1FDE3210F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RegistrarWebApiClient</RootNamespace>
-    <AssemblyName>RegistrarWebApiClient</AssemblyName>
+    <RootNamespace>RegistrarChatApiClient</RootNamespace>
+    <AssemblyName>RegistrarChatApiClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.2.2.0\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -48,21 +52,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interfaces\IAccount.cs" />
-    <Compile Include="Models\Account\LoginRequest.cs" />
-    <Compile Include="Models\Account\LoginResponse.cs" />
-    <Compile Include="Models\Account\LogoutRequest.cs" />
-    <Compile Include="Models\Account\LogoutResponse.cs" />
-    <Compile Include="Models\Account\RegisterAccountRequest.cs" />
-    <Compile Include="Models\Account\RegisterAccountResponse.cs" />
+    <Compile Include="ChatApiClient.cs" />
+    <Compile Include="Client\ClientListParam.cs" />
+    <Compile Include="Client\MessageParam.cs" />
+    <Compile Include="Server\IServerMethods.cs" />
+    <Compile Include="Client\IClientMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestInterceptor.cs" />
-    <Compile Include="Response.cs" />
-    <Compile Include="WebApiClient.cs" />
-    <Compile Include="WebApiException.cs" />
+    <Compile Include="Server\SendMessageParam.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RegistrarCommon\RegistrarCommon.csproj">
+      <Project>{3d9dcdd7-1145-420d-9931-33070a3715d3}</Project>
+      <Name>RegistrarCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
