--- a/SignalRClient/SignalRClient.csproj
+++ b/SignalRClient/SignalRClient.csproj
@@ -60,6 +60,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\RegistrarChatApiClient\RegistrarChatApiClient.csproj">
+      <Project>{6A733F41-9EBA-4F2D-AD95-FD1FDE3210F7}</Project>
+      <Name>RegistrarChatApiClient</Name>
+    </ProjectReference>
     <ProjectReference Include="..\RegistrarCommon\RegistrarCommon.csproj">
       <Project>{3d9dcdd7-1145-420d-9931-33070a3715d3}</Project>
       <Name>RegistrarCommon</Name>
