--- a/RegistrarChatApiClient/packages.config
+++ b/RegistrarChatApiClient/packages.config
@@ -3,4 +3,5 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
+  <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net452" />
 </packages>
