--- a/SignalRClient/packages.config
+++ b/SignalRClient/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net46" />
 </packages>
