--- a/Registrar/App.config
+++ b/Registrar/App.config
@@ -35,4 +35,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <appSettings>
+    <add key="ConnectionString" value="Server=127.0.0.1;Port=5432;Database=Registrar_DB;User Id=postgres;Password=m13l0nk4;"/>
+  </appSettings>
 </configuration>
