--- a/RegistrarWebApi/packages.config
+++ b/RegistrarWebApi/packages.config
@@ -7,4 +7,5 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="Ninject.Extensions.ChildKernel" version="3.2.0.0" targetFramework="net46" />
+  <package id="Npgsql" version="3.0.7" targetFramework="net46" />
 </packages>
