--- a/SignalRClient/packages.config
+++ b/SignalRClient/packages.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net46" />
+  <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net46" />
+  <package id="Ix-Main" version="1.2.5" targetFramework="net46" />
+  <package id="Julas.Utils" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net46" />
+  <package id="Simplify.Resources" version="1.0.0" targetFramework="net46" />
 </packages>
