--- a/Audio/packages.config
+++ b/Audio/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Cyotek.CircularBuffer" version="1.0.1" targetFramework="net452" />
   <package id="Julas.Utils" version="2.0.5" targetFramework="net452" />
   <package id="Julas.Utils.Reactive" version="1.0.1" targetFramework="net452" />
   <package id="NAudio" version="1.7.3" targetFramework="net452" />
