--- a/Registrar/packages.config
+++ b/Registrar/packages.config
@@ -8,4 +8,9 @@
   <package id="MSBuild.CopyDependencies" version="1.0.7" targetFramework="net46" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net46" />
 </packages>
