--- a/SignalRClient/packages.config
+++ b/SignalRClient/packages.config
@@ -6,6 +6,11 @@
   <package id="Julas.Utils" version="2.0.5" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net46" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net46" />
   <package id="SignalR.Client.TypedHubProxy" version="3.0.1" targetFramework="net46" />
   <package id="Simplify.Resources" version="1.0.0" targetFramework="net46" />
 </packages>
