--- a/Registrar/Registrar.csproj
+++ b/Registrar/Registrar.csproj
@@ -63,6 +63,9 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="OzekiSDK">
+      <HintPath>..\packages\OzekiSDK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
